Add translate str to int

--- a/cpp/LeetCode/.vscode/settings.json
+++ b/cpp/LeetCode/.vscode/settings.json
@@ -17,6 +17,7 @@
         "sstream": "cpp",
         "streambuf": "cpp",
         "deque": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "climits": "cpp"
     }
 }
