--- a/rust/Take-your-first-steps-with-Rust/demo/rust_modules_packages_crates/Cargo.toml
+++ b/rust/Take-your-first-steps-with-Rust/demo/rust_modules_packages_crates/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# https://crates.io/search?q=regex%20
+regex = "1.6.0"
