[java] stack demos

--- a/cpp/LeetCode/.vscode/launch.json
+++ b/cpp/LeetCode/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/output/${fileBasenameNoExtension}.out",
+            "program": "/tmp/${fileBasenameNoExtension}.out",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
@@ -33,7 +33,7 @@
             "name": "(lldb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/output/${fileBasenameNoExtension}.out",
+            "program": "/tmp/${fileBasenameNoExtension}.out",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
