--- a/cpp/LeetCode/.vscode/tasks.json
+++ b/cpp/LeetCode/.vscode/tasks.json
@@ -11,7 +11,7 @@
 				"-std=c++17",
 				"${file}",
 				"-o",
-				"${workspaceFolder}/output/${fileBasenameNoExtension}.out"
+				"/tmp/${fileBasenameNoExtension}.out"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
@@ -35,7 +35,7 @@
 				"-std=c++17",
 				"${file}",
 				"-o",
-				"${workspaceFolder}/output/${fileBasenameNoExtension}.out"
+				"/tmp/${fileBasenameNoExtension}.out"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
