[cpp] stack demos 2

--- a/cpp/LeetCode/.vscode/settings.json
+++ b/cpp/LeetCode/.vscode/settings.json
@@ -23,6 +23,7 @@
         "tuple": "cpp",
         "variant": "cpp",
         "utility": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "stack": "cpp"
     }
 }
