add sting_view test

--- a/cpp/study/2022/.vscode/tasks.json
+++ b/cpp/study/2022/.vscode/tasks.json
@@ -7,9 +7,10 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-std=c++20",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "/tmp/${fileBasenameNoExtension}"
             ],
             "options": {
                 "cwd": "${fileDirname}"
